crates/tui/tests/snapshots/screens__a_failed_load_reports_the_reason_rather_than_looking_empty.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 110, 12)"
---
"▀▀▀▀ SONDERA  trajectories                                                                   console  ■ ERROR "
"▀▀▀▀ filter all runs   0 of 0                                                                                 "
"┌RUNS────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  ■ ERROR  connection refused                                                                               │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌KEYS────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ <↑↓/jk> move   <enter> open   <i> inspect   </> filter   <r> refresh   <t> theme   <q> quit                │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
