crates/tui/tests/snapshots/screens__a_filtered_empty_feed_names_the_filter.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 110, 12)"
---
"▀▀▀▀ SONDERA  trajectories                                                                   console  ● READY "
"▀▀▀▀ filter nothing-matches-this▏   0 of 3                                                                    "
"┌RUNS────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ No run matches 'nothing-matches-this'.                                                                     │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌KEYS────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ <↑↓/jk> move   <enter> open   <i> inspect   </> filter   <r> refresh   <t> theme   <q> quit                │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
