crates/tui/tests/snapshots/screens__a_tailed_transcript_at_sixty_columns.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 60, 24)"
---
"◆ SONDERA  trajectories / cursor / run      console  ◆ LIVE "
" ■ DENY   ■ HIGH   interrupted                              "
"                                                            "
"┌STEPS · 2─────────┐┌RUN · DIGEST · SCAN ▾─────────────────┐"
"│ ▾ $ she… ■ DENY  ││ Build cleanup blocked by policy      │"
"│     12:34:56 rm  ││  ▲ INTERRUPTED   ■ HIGH   1 signal   │"
"│    ↳ exit 1      ││ DIGEST                               │"
"│   » prompt · us… ││ The agent tried to clear the build   │"
"│     12:35:10 Cle │└──────────────────────────────────────┘"
"│                  │┌EVENT 1/3 · SHELL─────────────────────┐"
"│                  ││  ■ DENY   ■ HIGH   ◆ IMPLEMENT   ⟐   │"
"│                  ││  side-effecting                      │"
"│                  ││ recursive delete outside the         │"
"│                  ││ workspace                            │"
"│                  ││ Removed a build directory.           │"
"│                  ││ 12:34:56  evt-1                      │"
"│                  ││                                      │"
"│                  ││ SIGNALS                              │"
"└──────────────────┘└──────────────────────────────────────┘"
"┌KEYS──────────────────────────────────────────────────────┐"
"│ <↑↓/jk> step   <tab> tree · run · event   <←→/hl> fold   │"
"│ <n> next fire   <s> next signal   <r> refresh   <esc>    │"
"│ back   <q> quit                                          │"
"└──────────────────────────────────────────────────────────┘"
