crates/tui/tests/snapshots/screens__a_transcript_still_loading_says_so_in_both_panes.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 120, 16)"
---
"▀▀▀▀ SONDERA  trajectories / claude-code / run-a                                                     console  ▲ LOADING "
"▀▀▀▀                                                                                                                    "
"                                                                                                                        "
"┌TRANSCRIPT────────────────────────────┐┌EVENT─────────────────────────────────────────────────────────────────────────┐"
"│ Loading…                             ││ Loading…                                                                     │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
"┌KEYS──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ <↑↓/jk> step   <tab> pane   <←→/hl> fold   <n> next fire   <s> next signal   <r> refresh   <esc> back   <q> quit     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
