crates/tui/tests/snapshots/screens__an_empty_feed_explains_itself.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 110, 12)"
---
"▀▀▀▀ SONDERA  trajectories                                                                   console  ● READY "
"▀▀▀▀ filter all runs   0 of 0                                                                                 "
"┌RUNS────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ No trajectories recorded yet. Run a coding agent with Sondera hooks installed.                             │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌KEYS────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ <↑↓/jk> move   <enter> open   <i> inspect   </> filter   <r> refresh   <t> theme   <q> quit                │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
