crates/tui/tests/snapshots/screens__an_unscanned_run_gives_every_row_back_to_the_transcript.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 120, 36)"
---
"▀▀▀▀ SONDERA  trajectories / cursor / run-b                                                            console  ● READY "
"▀▀▀▀  ■ DENY   completed   42 events   4.2s                                                                             "
"                                                                                                                        "
"┌STEPS · 2─────────────────────────────┐┌EVENT 1/3 · SHELL─────────────────────────────────────────────────────────────┐"
"│ ▾ $ shell ■ DENY                     ││  ■ DENY   ■ HIGH   ◆ IMPLEMENT   ⟐ side-effecting                            │"
"│     12:34:56 rm -rf /tmp/build ⟐     ││ recursive delete outside the workspace                                       │"
"│    ↳ exit 1                          ││ Removed a build directory.                                                   │"
"│   » prompt · user                    ││ 12:34:56  evt-1                                                              │"
"│     12:35:10 Clean the build direct… ││                                                                              │"
"│                                      ││ SIGNALS                                                                      │"
"│                                      ││  ■ HIGH  governance · destructive operation — Recursive delete on an         │"
"│                                      ││   absolute path.                                                             │"
"│                                      ││ ──────────────────────────────────────────────────────────────────────────── │"
"│                                      ││ ACTION                                                                       │"
"│                                      ││ cwd       /repo                                                              │"
"│                                      ││                                                                              │"
"│                                      ││ COMMAND  bash                                                                │"
"│                                      ││ ▏ rm -rf /tmp/build                                                          │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
"┌KEYS──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ <↑↓/jk> step   <tab> pane   <←→/hl> fold   <n> next fire   <s> next signal   <r> refresh   <esc> back   <q> quit     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
