crates/tui/tests/snapshots/screens__the_insight_panel_at_sixty_columns.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 60, 30)"
---
"◆ SONDERA  trajectories / cursor / run     console  ● READY "
" ■ DENY   ■ HIGH   interrupted                              "
"                                                            "
"┌STEPS · 2─────────┐┌RUN · DIGEST · SCAN ▾─────────────────┐"
"│ ▾ $ she… ■ DENY  ││ Build cleanup blocked by policy      │"
"│     12:34:56 rm  ││  ▲ INTERRUPTED   ■ HIGH   1 signal   │"
"│    ↳ exit 1      ││ DIGEST                               │"
"│   » prompt · us… ││ The agent tried to clear the build   │"
"│     12:35:10 Cle ││ tree with rm -rf and was denied.     │"
"│                  │└──────────────────────────────────────┘"
"│                  │┌EVENT 1/3 · SHELL─────────────────────┐"
"│                  ││  ■ DENY   ■ HIGH   ◆ IMPLEMENT   ⟐   │"
"│                  ││  side-effecting                      │"
"│                  ││ recursive delete outside the         │"
"│                  ││ workspace                            │"
"│                  ││ Removed a build directory.           │"
"│                  ││ 12:34:56  evt-1                      │"
"│                  ││                                      │"
"│                  ││ SIGNALS                              │"
"│                  ││  ■ HIGH  governance · destructive    │"
"│                  ││   operation — Recursive delete on an │"
"│                  ││   absolute path.                     │"
"│                  ││ ──────────────────────────────────── │"
"│                  ││ ACTION                               │"
"└──────────────────┘└──────────────────────────────────────┘"
"┌KEYS──────────────────────────────────────────────────────┐"
"│ <↑↓/jk> step   <tab> tree · run · event   <←→/hl> fold   │"
"│ <n> next fire   <s> next signal   <r> refresh   <esc>    │"
"│ back   <q> quit                                          │"
"└──────────────────────────────────────────────────────────┘"
