crates/tui/tests/snapshots/screens__the_run_inspector_at_sixty_columns.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 60, 20)"
---
"◆ SONDERA  trajectories                    console  ● READY "
"filter all runs   3 of 3                                    "
"┌RUNS · 3──────────────────────────────────────────────────┐"
"│ VERD┌RUN · RUN-B · DIGEST · SCAN ▾───────────────┐       │"
"│  ● A│  ■ DENY   ■ HIGH   interrupted  completed  │▓▓yer  │"
"│  ■ D│  4.2s                                      │▓▓dele │"
"│  · N│ agent     cursor   cursor / cursor         │▓▓     │"
"│     │ policy    no-recursive-delete              │▓▓     │"
"│     │ score     0.82                             │▓▓     │"
"│     │                                            │▓▓     │"
"│     │ DIGEST                                     │▓▓     │"
"│     │ events    12 · 1 side-effecting            │▓▓     │"
"│     │                                            │▓▓     │"
"│     └────────────────────────────────────────────┘▓▓     │"
"│       ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓     │"
"└──────────────────────────────────────────────────────────┘"
"┌KEYS──────────────────────────────────────────────────────┐"
"│ <↑↓/jk> scroll   <n/p> next run   <enter> open   <i/esc> │"
"│ close   <q> quit                                         │"
"└──────────────────────────────────────────────────────────┘"
