crates/tui/tests/snapshots/screens__the_run_inspector_shows_the_whole_scan_over_the_feed.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 110, 24)"
---
"▀▀▀▀ SONDERA  trajectories                                                                   console  ● READY "
"▀▀▀▀ filter all runs   3 of 3                                                                                 "
"┌RUNS · 3────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ VERDICT     AGENT              ACTIVITY       RISK         STATUS     DUR     SUMMARY                      │"
"│  ● ALLOW ┌RUN · RUN-B · DIGEST · SCAN ▾───────────────────────────────────────────────────────┐orage layer │"
"│  ■ DENY  │  ■ DENY   ■ HIGH   interrupted  completed  4.2s                                    │▓▓ve delete │"
"│  · NONE  │ agent     cursor   cursor / cursor                                                 │▓▓pans      │"
"│          │ policy    no-recursive-delete                                                      │▓▓          │"
"│          │ score     0.82                                                                     │▓▓          │"
"│          │                                                                                    │▓▓          │"
"│          │ DIGEST                                                                             │▓▓          │"
"│          │ events    12 · 1 side-effecting                                                    │▓▓          │"
"│          │                                                                                    │▓▓          │"
"│          │ BEHAVIORAL SCAN                                                                    │▓▓          │"
"│          │ outcome   interrupted                                                              │▓▓          │"
"│          │ confidence 90%                                                                     │▓▓          │"
"│          │                                                                                    │▓▓          │"
"│          └────────────────────────────────────────────────────────────────────────────────────┘▓▓          │"
"│            ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓          │"
"│                                                                                                            │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌KEYS────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ <↑↓/jk> scroll   <n/p> next run   <enter> open   <i/esc> close   <q> quit                                  │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
